--- a/Photos website.html
+++ b/Photos website.html
@@ -21,7 +21,7 @@
 
        <p> <center><IMG SRC="Bird.JPG" width = "350px"> <IMG SRC="Ferns.JPG" width = "350px"> <IMG SRC="Beach.JPG" width = "350px"> <IMG SRC="Plains.JPG" width = "350px"> <IMG SRC="Sign.JPG" width = "350px"> <IMG SRC="Left Turn.JPG" width = "350px"><IMG SRC="Footprint.JPG" width = "350px"> <IMG SRC="Lifeguard.JPG" width = "350px"> <IMG SRC="moon.JPG" width = "350px"> <IMG SRC="moon2.JPG" width = "350px"> <IMG SRC="Tree.JPG" width = "350px"> <IMG SRC="Tresspassing.JPG" width = "350px"></center>
 
-       	<p> <center><A HREF="Index.html"> Home Page</A></center>
+       	<p> <center><A HREF="index.html"> Home Page</A></center>
        	<p> <center> <A HREF="Videopage.html"> Car Show Video</A></center>
        	<p> <center> <A HREF="https://www.facebook.com/groups/618232764878487/"> Facebook Page for Southern Maine Car Meets </A></center>
        	<p> <center> <A HREF="https://www.stjude.org/donate/donate-to-st-jude.html?sc_dcm=236394064&sc_cid=kwp70589&source_code=IIQ181010008&s_kwcid=AL!4519!10!79027501167574!79027742677241&ef_id=W4xeGAAACJSCeevR:20191111180858:s"> Donate to St. Judes CHildren Research Hospital</A></center>
