--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<center><h2>Free Lance Photographer Just for Fun</h2></center>
 
 		<p>
-			<center><IMG SRC="Portrait.JPG" width = "200px"></center>
+			<center><IMG SRC="portrait.JPG" width = "200px"></center>
 		</p>
 
 
