--- a/Videopage.html
+++ b/Videopage.html
@@ -22,9 +22,9 @@
     	<p> <center><VIDEO SRC="April 28 car show.MP4" Width = 600px> </VIDEO></center>
 
         
-        <p> <center> <A HREF="index.Html">Home Page</A></center>
+        <p> <center> <A HREF="index.html">Home Page</A></center>
         <p> <center><A HREF="https://www.facebook.com/groups/618232764878487/"> Facebook Page for Southern Maine Car Meets </A></center>
-        </p> <center> <A HREF="Photos website.Html"> Photo Gallery</A></center>
+        </p> <center> <A HREF="photoswebsite.Html"> Photo Gallery</A></center>
 		<p> <center><A HREF="https://www.stjude.org/donate/donate-to-st-jude.html?sc_dcm=236394064&sc_cid=kwp70589&source_code=IIQ181010008&s_kwcid=AL!4519!10!79027501167574!79027742677241&ef_id=W4xeGAAACJSCeevR:20191111180858:s"> Donate to St. Judes CHildren Research Hospital</A> </center>
 		<p> <center> <A HREF="https://quizlet.com/17601769/bua-235-final-flash-cards/"> Study Help for The Final</A></center>
 		<p><center> <A HREF="https://www.google.com/doodles/30th-anniversary-of-pac-man"> Stress Reliever</A></center>
