--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 			<p><center>Links to:</center>
 			<p> <center><A HREF="https://www.facebook.com/groups/618232764878487/"> Facebook Page for Southern Maine Car Meets </A> </center>
-			</p><center> <A HREF="Photos website.Html"> Photo Gallery</A></center>
+			</p><center> <A HREF="photoswebsite.html"> Photo Gallery</A></center>
 			<p> <center><A HREF="Videopage.html"> Car Show Video</A></center>
 			<p><center> <A HREF="https://www.stjude.org/donate/donate-to-st-jude.html?sc_dcm=236394064&sc_cid=kwp70589&source_code=IIQ181010008&s_kwcid=AL!4519!10!79027501167574!79027742677241&ef_id=W4xeGAAACJSCeevR:20191111180858:s"> Donate to St. Judes CHildren Research Hospital</A></center>
 			<p> <center><A HREF="https://quizlet.com/17601769/bua-235-final-flash-cards/"> Study Help for The Final</A></center>
